--- a/_posts/2018-10-19-不取诸民-将焉取之.md
+++ b/_posts/2018-10-19-不取诸民-将焉取之.md
@@ -2,10 +2,11 @@
 title: 不取诸民，将焉取之？
 layout: post
 image: https://cs.vmovier.com/Uploads/cover/2017-01-11/5875d9889adc1_cut.jpeg@600w_400h_1e_1c.jpg
+headerImage: true
 tags: 
 category: blog
 author: ysss
-description: 由这句话想到的一些个事情
+description: 由这句话想到的那些个事情
 
 ---
 
@@ -36,7 +37,9 @@ description: 由这句话想到的一些个事情
 ### 一、何为国家？
 
 马克思主义认为：国家就是暴力机器，是一个阶级用来镇压另一个阶级的有组织形式的暴力。
+
 韦伯《经济与社会》：国家是一种制度性的权力运作机构，它在实施其规则时垄断着合法的人身强制。
+
 恩格斯：国家是经济上占统治地位的阶级进行阶级统治的政治权力机构。
 
 总之，是一个成长于社会之中而又凌驾于社会之上的、以暴力或合法性为基础的、带有相当抽象性的权力机构。
@@ -59,7 +62,7 @@ description: 由这句话想到的一些个事情
 
 ## 定位
 
-如果阶级比作金字塔性，那么自己应该算是底层阶级。时刻受上层阶级剥削的底层。
+如果把阶级比作金字塔性，那么自己应该算是底层阶级。属于时刻受上层阶级剥削的底层。
 
 作为一个底层人，在现有的环境下，想翻身，是非常非常困难的。唯一能做的就是按照阶级的定义，一级一级跳跃。而每一级的跳跃都可能是穷尽一生才能做到。
 
