--- a/_posts/2018-10-20-去过一次济南.md
+++ b/_posts/2018-10-20-去过一次济南.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-image:
+image: http://s8.sinaimg.cn/middle/76458099gac1e13104577&690
+headerImage: true
 tags: 
 category: blog
 author: ysss
