--- a/_posts/2018-10-22-为什么要常回家看看.md
+++ b/_posts/2018-10-22-为什么要常回家看看.md
@@ -25,9 +25,9 @@ description: 谈谈自己对常回家看看的认识
 
 年少的时候，去到外面，什么都感觉到新鲜，很少想到回家。
 
-当年，外公去世后，还不觉得没有什么，感觉还都过得去，毕竟外婆还在，也没觉得有什么特别。当然，主要还是因为本人跟外公感情不深。
+当年，外公去世后，还不觉得有什么，感觉还都过得去，毕竟外婆还在，也没觉得有什么特别。当然，主要还是因为本人跟外公感情不深。
 
-PS：以前其实很不能理解外公那严重的重男轻女思路，后来慢慢大了，自己当上了父亲，看过了很多事情，渐渐的也就能理解那一辈人了。当然这是后话。
+PS：以前其实很不能理解外公那严重的重男轻女思想，后来慢慢大了，自己当上了父亲，看过了很多事情，渐渐的也就能理解那一辈人了。当然这是后话。
 
 ### 转折
 
@@ -41,17 +41,17 @@ PS：以前其实很不能理解外公那严重的重男轻女思路，后来慢
 
 最痛惜的是她老人家这一生真真是没体验什么好日子，日夜劳作，那么老了还要自己做一家子饭，自己种菜。小的时候我还经常去她老人家，吃她做的粥，蛋花，焖（jiao）南瓜，还有腌菜炒苦瓜。
 
-想想作为孙子辈，又在北京，总是感觉莫名的忧伤，因为没有带她去一趟北京。
+想想作为孙子辈，又在北京，总是感觉莫名的忧伤，因为没有带她来一趟北京。
 
 ### 她那一直自豪的事
 
-记得她说得最自豪的一件事就是年轻的时候去上海看病的事情，也是她老人家唯一一次出远门的机会。
+记得她说的最自豪的一件事就是年轻的时候去上海看病的事情，也是她老人家唯一一次出远门的机会。
 
 在之后她就再也没出过这个村，或者说这个县，市里就更没有到过了。
 
 想想人这一生这么的短暂，就这么走了，也没能好好的看一看这个世界。
 
-就像一句话说：世界这么大，我想去看看。我的心情大致就是这样。在这世界都没留下什么就突然这么走了，留下的是无尽的遗憾~
+就像一句话说的：世界这么大，我想去看看。我的心情大致就是这样。在这世界都没留下什么就突然这么走了，留下的是无尽的遗憾~
 
 ## 到家
 
